tests/baselines/reference/typeofTypeParameter.errors.txt
tests/cases/conformance/types/specifyingTypes/typeQueries/typeofTypeParameter.ts(3,19): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/types/specifyingTypes/typeQueries/typeofTypeParameter.ts (1 errors) ====
    function f<T>(x: T): T {
        var a: typeof x;
        var y: typeof T;
                      ~
!!! error TS2304: Cannot find name 'T'.
        return a;
    }